tests/pass/check/callback_syntax_and_function_types/main.kira
function sink(value: Int) {
    print(value);
    return;
}

function register(handler: (Int) -> Void) {
    return;
}

@Main
function main() {
    let callback: (Int) -> Void = sink;
    register { value in
        sink(value);
    }
    callback(1);
    return;
}
