tests/fail/semantics/immutable_local_assignment/main.kira
@Main
function entry() {
    let value: I64 = 1;
    value = 2;
    return;
}
